syntax = "proto3";

import "anemos/metastore/v1alpha1/report.proto";
import "google/protobuf/timestamp.proto";

option java_package = "io.anemos.metastore.v1alpha1";

package anemos.metastore.v1alpha1;

service SchemaRegistyService {
    rpc SubmitSchema (SubmitSchemaRequest) returns (SubmitSchemaResponse);
    rpc VerifySchema (SubmitSchemaRequest) returns (SubmitSchemaResponse);
    rpc GetSchema (GetSchemaRequest) returns (GetSchemaResponse);

    rpc BroadcastComponentSchema (BroadcastComponentSchemaRequest) returns (BroadcastComponentSchemaResponse);
}

enum Purpose {
    PURPOSE_UNSET = 0;
    PURPOSE_PRODUCER = 1;
    PURPOSE_CONSUMER = 2;
    PURPOSE_API_SERVER = 3;
    PURPOSE_API_CLIENT = 4;
}

message Scope {
    string scope_name = 1;
    oneof package_scope {
        string package_name = 2;
        string package_prefix = 3;
    }
    oneof entity_scope {
        string message_name = 4;
        string enum_name = 5;
        string service_name = 6;
        string file_name = 7;
    }
    bool transitive = 8;
    Purpose purpose = 9;
}

message SubmitSchemaRequest {

    // Represents the schema registry names. If a schema registry doesn't support multiple
    // registries this field is ignored. The default value represents the default registry.
    string registry_name = 1;
    string branch_name = 2;
    string environment_name = 5;

    // These are proto2 type google.protobuf.FileDescriptorProto, but
    // we avoid taking a dependency on descriptor.proto, which uses
    // proto2 only features, by making them opaque
    // bytes instead
    bytes fd_proto_set = 3;

    repeated Scope scope = 4;
}

message SubmitSchemaResponse {
    string schema_profile = 1;
    map<string, FileResult> result = 2;
    int32 error_code = 3;
    //SchemaDiff diff = 1;
}

message GetSchemaRequest {

    // Represents the schema registry names. If a schema registry doesn't support multiple
    // registries this field is ignored. The default value represents the default registry.
    string registry_name = 1;
    string branch_name = 2;
    string environment_name = 5;

    repeated Scope scope = 4;
}

message GetSchemaResponse {
    // These are proto2 type google.protobuf.FileDescriptorProto, but
    // we avoid taking a dependency on descriptor.proto, which uses
    // proto2 only features, by making them opaque
    // bytes instead
    bytes fd_proto_set = 1;

    int32 error_code = 3;
}

message BroadcastComponentSchemaRequest {

    // Probably don't need registry selection. Use joined registry
    //string registry_name = 1;
    //string branch_name = 2;
    string environment_name = 3;

    string component_instance = 4;
    map<string, string> component_labels = 5;

    // These are proto2 type google.protobuf.FileDescriptorProto, but
    // we avoid taking a dependency on descriptor.proto, which uses
    // proto2 only features, by making them opaque
    // bytes instead
    bytes fd_proto_set = 6;

    google.protobuf.Timestamp since = 7;
    repeated Scope scopes = 8;
    map<string, LivenessMetrics> metrics = 9;
}

message BroadcastComponentSchemaResponse {
}

message LivenessMetrics {
    Scope scope = 1;
    int64 data_bytes = 2;
    int64 data_messages = 3;
    int64 data_errors = 4;
    int64 data_warnings = 5;
}
